Figured out how to get a callback when the application is launched (double-clicked) while already open.

--- a/Waterfall/Waterfall/StartViewController.xib
+++ b/Waterfall/Waterfall/StartViewController.xib
@@ -45,7 +45,7 @@
                         <font key="font" metaFont="system"/>
                     </buttonCell>
                     <connections>
-                        <action selector="relaunchWithSender:" target="-2" id="vPR-nx-zOQ"/>
+                        <action selector="relaunchWithSender:" target="-2" id="iKQ-GU-vDH"/>
                     </connections>
                 </button>
             </subviews>
